--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
   padding: 2rem;
 }
 
-ul#band {
+ul#bands {
   background-color: rgba(255, 255, 255, 0.9);
   max-width: 400px;
   margin: auto;
@@ -15,11 +15,11 @@ ul#band {
   list-style-type: square;
 }
 
-ul#band li {
+ul#bands li {
   padding: 10px;
   border-bottom: 1px solid #ddd;
 }
 
-ul#band li:last-child {
+ul#bands li:last-child {
   border-bottom: none;
 }
